# viraxis

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  WORKFLOW_GIT.md  alembic.ini  check_db.py  docker-compose.yml  pyproject.toml  render.yaml  setup_vm.sh  test_e2e.py  test_register.py
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_user_role.py  0005_add_facebook_platform.py  0006_trendsnapshot_7_new_fields.py  0007_contentitem_retention_layer.py  0008_contentdecision_raw_video_fk.py  0009_office_niche_text.py  0010_niche_profile_niche_name_text.py  0011_raw_video_ai_analysis.py
docs/: relatorio_avanco_macro.md  relatorio_brain_fase1.md
frontend/: next.config.ts  package.json  vercel.json
frontend/public/: tiktokrgtnulygJ7PrC5FKYJgYdLGhuepx6dhY.txt
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/cadastro/: page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/terms/: page.tsx
frontend/src/app/tiktokrgtnulygJ7PrC5FKYJgYdLGhuepx6dhY.txt/: route.ts
frontend/src/lib/: api.ts
src/viraxis/: config.py
src/viraxis/agents/brain/: __init__.py  agent.py  runner.py  schemas.py  tasks.py
src/viraxis/agents/davi/: __init__.py  tasks.py
src/viraxis/agents/kevin/: __init__.py  agent.py
src/viraxis/agents/publisher/: platform_clients.py
src/viraxis/agents/renderer/: agent.py  runner.py  schemas.py  tasks.py  v2_direct.py
src/viraxis/agents/scout/: __init__.py  runner.py
src/viraxis/agents/tools/: file_tools.py  python_tools.py
src/viraxis/api/: deps.py  main.py  security.py
src/viraxis/api/routers/: agent_run_logs.py  auth.py  billing.py  brain.py  content_items.py  dev.py  oauth.py  offices.py  raw_videos.py  users.py
src/viraxis/domain/models/: __init__.py  agent_run_log.py  content_decision.py  content_item.py  niche_profile.py  office.py  raw_video.py  social_account.py  trend_snapshot.py  user.py
src/viraxis/infrastructure/: email.py  image_generator.py  scene_extractor.py  tts_client.py  upload_analyzer.py  video_composer.py  video_composer_v2.py  video_processor.py  ytdlp_client.py
src/viraxis/infrastructure/database/: session.py
src/viraxis/infrastructure/repositories/: __init__.py  base.py  content_decision.py  raw_video.py  user.py
src/viraxis/worker/: tasks.py
viraxis_db/: Dockerfile  pyproject.toml  render.yaml
viraxis_db/.github/workflows/: deploy.yml
viraxis_db/alembic/: env.py
viraxis_db/alembic/versions/: 0001_initial_schema.py  0003_content_items_fase2.py  0004_add_stripe_fields.py
viraxis_db/frontend/: .env.local.example  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json
viraxis_db/frontend/public/: .redeploy  tiktok53XzgjEqJEcz3TPYQ2brGO555yzwJNBa.txt
viraxis_db/frontend/src/app/: globals.css  page.tsx
viraxis_db/frontend/src/lib/: api.ts
viraxis_db/src/viraxis/: config.py
viraxis_db/src/viraxis/agents/: __init__.py  dev_crew.py
(+96 files in other folders)
