[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viraxis"
version = "0.1.0"
description = "VIRAXIS — Autonomous Viral Content Offices"
requires-python = ">=3.11"
dependencies = [
    # Web
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",

    # Database
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",        # driver async para PostgreSQL
    "psycopg2-binary>=2.9.9", # driver sync (Alembic CLI)

    # Task queue
    "celery[redis]>=5.4.0",
    "redis>=5.0.0",

    # AI / Agents
    "crewai[google-genai]>=0.70.0",  # google-genai: provider nativo Gemini no CrewAI
    "litellm>=1.40.0",              # abstração multi-provider (fallback / outros providers)
    # "anthropic>=0.28.0",          # ativar quando tiver créditos

    # Media
    "faster-whisper>=1.0.0",
    "yt-dlp>=2024.5.1",
    "edge-tts>=6.1.0",         # TTS PT-BR (vozes neurais) para modo 100% IA

    # Storage
    "boto3>=1.34.0",           # Cloudflare R2 (S3-compatible) — legado
    "requests>=2.31.0",        # Supabase Storage signed URLs (síncrono)

    # CLI / UX
    "typer>=0.12.0",
    "rich>=13.7.0",

    # Logging
    "structlog>=24.2.0",

    # Security
    "cryptography>=42.0.0",    # Fernet para tokens OAuth
    "passlib[bcrypt]>=1.7.4",  # Hash de senhas
    "python-jose[cryptography]>=3.3.0",  # JWT
    "httpx>=0.27.0",                      # HTTP client para Resend API
    "email-validator>=2.0",               # Validação de EmailStr (Pydantic)
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",           # test client FastAPI
    "factory-boy>=3.3.0",      # fixtures de teste
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
viraxis = "viraxis.cli.main:app"

[tool.setuptools.packages.find]
where = ["src"]

# ------------------------------------------------------------------ #
# Ruff — linter + formatter                                           #
# ------------------------------------------------------------------ #
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["viraxis"]

# ------------------------------------------------------------------ #
# Pytest                                                              #
# ------------------------------------------------------------------ #
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# ------------------------------------------------------------------ #
# Mypy                                                                #
# -----------------------------------------------------------------